# Noah-owp-modular-CMake

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  FindNetCDF.cmake  README.md  TODO
bmi/: CMakeLists.txt
driver/: CMakeLists.txt
src/: CMakeLists.txt
